--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Danil Skachkov <danil.skachkov@speaktoit.com> (https://api.ai)",
   "license": "Apache 2.0",
   "dependencies": {
+    "api-ai-javascript": "^2.0.0-beta.14",
     "body-parser": "^1.15.0",
     "express": "^4.13.4"
   }
